--- a/style.css
+++ b/style.css
@@ -13,27 +13,29 @@ box-sizing :border-box;
   background-size: cover;
   padding: 0 5%;
   position: relative;
+  align-self: center;
 }
 
  .content{
     top: 50%;
     position: absolute;
     transform: translateY(-50%);
-    color: white;
+    color: goldenrod;
  }
  .content h1{
     font-size: 64px;
     font-weight: 600;
+    align-items: center;
  }
  .content h1 span{
-    color:gold;
+    color: goldenrod ;
  }
  .content button{
     background: transparent;
     border: 2px solid #fff;
     outline: none;
     padding: 12px 25px;
-    color: #fff;
+    color: goldenrod;
     display: flex;
     align-items: center;
     margin-top: 30px;
@@ -54,6 +56,9 @@ box-sizing :border-box;
     font-size: 60px;
     margin-bottom: -14px
    }
+
+   
+
 
     
 
